# ChiefLitigator

./: .dockerignore  .env.chieflitigator.example  .env.example  .env.production.example  .gitignore  ASANA_DEPLOYMENT_CHECKLIST.md  CHIEFLITIGATOR_STRATEGIC_BUILD_PLAN.md  CLAUDE.md  CLAUDE_CODE_DEVIN_ORCHESTRATION.md  DEV_TO_PRODUCTION_PROTOCOL.md  Dockerfile  EXECUTION_JOURNAL.md  GUARDRAILS.yml  MEMORY.md  Makefile  PRODUCTION_DEPLOYMENT_ROADMAP.md  README.md  ROADMAP_TO_FINISH.md  RUNBOOK.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  sentry.properties
.claude/: settings.json
.claude/hooks/: cpaa-model-guard.sh  env-guard.sh  no-placeholders.sh  post-edit-logger.sh  session-startup.sh
.githooks/: pre-commit-cpaa
.github/workflows/: ci.yml  deploy-production.yml  security-scan.yml  wdc-gate.yml
.portwave/: cascade_algorithm.json  cascade_algorithm.yaml
DOCS/: API_REFERENCE.md  ARCHITECTURE.md  CIPHERGY-FINAL-ROADMAP.md  CIPHERGY-WINNING-EDGE-ENHANCEMENTS.md  CIPHERGY_PRODUCT_SPEC_V2.md  CIPHERGY_PRODUCT_SPEC_V3_DELTA.md  CIPHERGY_RUNBOOK (1).md  CIPHERGY_V3.1_E17_VERIFICATION_CHAINS.md  CIPHERGY_V3.1_MEDIUM_GAPS.md  CIPHERGY_V3.1_SECTION14_ETHICAL_LEGAL_FRAMEWORK.md  CIPHERGY_V3.1_SECTION15_DATA_PRIVACY_SECURITY.md  CIPHERGY_V3.1_SECTION16_TESTING_STRATEGY.md  CONTEXT.md  FINAL_SECURITY_AUDIT.md  QUICKSTART.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  USER_GUIDE.md  V0_ADMIN_PROMPTS.md  V0_GENERATED_URLS.md  V0_PROMPTS.md  WDC-COMPASS-ANALYSIS.md  WDC-V2-SPEC-REVIEW.md  WDC-V3.1-RESCORE.md  compass_artifact_wf-fdf2a114-cd41-4866-8be0-3264df3fffb0_text_markdown (1).md
RUNBOOK/: Ciphergy_Runbook.md
admin-frontend/: next.config.js
alembic/: env.py
alembic/versions/: 2026_03_16_d28efd9f01e6_initial_schema.py
docs/: Agentic_Law_Sandbox_Complete_Report.md  Auto_Siphon_and_Matching_Architecture.md  CHIEFLITIGATOR_ADVANTAGE_MATRIX.md  Westlaw_Platform_Review_and_Agentic_System_Blueprint.md  agent_skills.json  agent_skills.yaml
frontend/: .env.local.example  .env.production  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-header.tsx  chat-input.tsx  chat-message.tsx  chat-sidebar.tsx
frontend/lib/: api.ts  deadline-types.ts
infrastructure/: cloudflare-waf-rules.json  cloudformation.yml  ecs-task-definition.json  eventbridge_siphon_schedule.json  provision_dynamodb.py
legacy/: DualAI_README.md  ENHANCEMENTS.md  LICENSE  README.md  REQUIREMENTS.md  STANDARD_OPS.md  config.json  launch.sh  package.json  registry.json  requirements.txt  setup.py
legacy/agents/: deadline_sentinel.md  draft_guardian.md  evidence_coach.md  onboarding_agent.md  strategy_advisor.md
legacy/ciphergy/: __init__.py  cli.py
legacy/config/: ciphergy.example.yaml  ciphergy.yaml  data_classification.yaml
legacy/core/: AGENT_CLOUD.md  AGENT_LOCAL.md  COMM_PROTOCOL.md  GUARDRAILS.md  INPUT_GATES.md  WDC_PANEL.md
legacy/dashboard/: dashboard.py  index.html
legacy/github-workflows/: deploy.yml  test.yml
legacy/scripts/: agent_comm.py  asana_bridge.py  build_frontend.py  cascade.py  ciphergy.sh  ciphergy_init.py  crypto.py  nerve_center.py  sanitize_sync.py
legacy/sync/: SYNC_MANIFEST.md
legacy/templates/: ADVERSARY_PLAYBOOK.template.md  AGENT_CLOUD.template.md  AGENT_LOCAL.template.md  CONFIDENCE_MONITOR.template.md  CROSS_PROJECT_SYNC.template.md  DELIVERABLE_CHECKLIST.template.md  ENTITY_ANALYSIS.template.md  EVIDENCE_INTAKE.template.md  MILESTONE_TRACKER.template.md  OUTPUT_DRAFT.template.md  QUESTIONS.template.md  RED_ALERTS.template.md  SITUATION_DASHBOARD.template.md  SOURCE_PREP.template.md  VERSION_REGISTRY.template.json
legacy/tests/: test_bedrock.py  test_nerve_center.py  test_registry.py  test_sanitizer.py
scripts/: build-production.sh
src/: __init__.py  api.py  api_models.py  errors.py
src/admin/: __init__.py  agent.py  audit.py  auth.py  routes.py
src/agents/: __init__.py  base_agent.py  compliance_counsel.py  discovery_manager.py  docket_monitor.py  document_generator.py  drafting_counsel.py  evidence_scorer.py  intake_agent.py  lead_counsel.py  red_team.py  research_counsel.py  strategy_advisor.py
src/api/: __init__.py  case_router.py  chat_router.py  document_router.py  main_app.py  system_router.py  webhook_router.py
src/auth/: __init__.py  admin.py  jwt_handler.py  middleware.py  signup.py
src/beta/: __init__.py  email.py  gate.py  middleware.py  models.py  router.py
src/cases/: __init__.py  routes.py
src/config/: __init__.py  settings.py
src/containers/: __init__.py  jurisdiction.py  registry.py
src/dashboard/: clio_plus_engine.py
src/database/: __init__.py  crud.py  engine.py  knowledge_models.py  models.py
src/ingestion/: messy_doc_engine.py
src/integrations/: apify.py  (+9 more)
tests/: test_admin.py  test_auth.py  test_bedrock.py  test_beta_gate.py  test_cases.py  test_database.py  test_deadline_calc.py  test_galvanizer.py  test_integration.py  test_matching.py  test_siphon.py
(+142 files in other folders)
